<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magen_sup"
        android:textSize="@dimen/texto_titulo"
        android:textStyle="bold"
        android:text="@string/titulo_confirmar"
        android:textAlignment="center" />
    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magen_sup"
        android:layout_marginLeft="@dimen/margen_izq"
        android:textSize="@dimen/texto_datos"
        android:text="@string/nombre"/>
    <TextView
        android:id="@+id/tvFechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/separa_renglon"
        android:layout_marginLeft="@dimen/margen_izq"
        android:textSize="@dimen/texto_datos"
        android:text="@string/fechanac"/>
    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margen_izq"
        android:layout_marginTop="@dimen/separa_renglon"
        android:textSize="@dimen/texto_datos"
        android:text="@string/telefono"/>
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magen_sup"
        android:layout_marginLeft="@dimen/margen_izq"
        android:textSize="@dimen/texto_datos"
        android:text="Email"/>
    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magen_sup"
        android:layout_marginLeft="@dimen/margen_izq"
        android:textSize="@dimen/texto_datos"
        android:text="@string/descripcion"/>

    <Button
        android:id="@+id/btnEditarDatos"
        android:layout_width="@dimen/ancho_boton"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magen_sup"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/texto_datos"
        android:text="Editar Datos"/>
</LinearLayout>