<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.turrusoft.altacontactos.MainActivity">

    <LinearLayout
        android:id="@+id/llNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/magen_sup"
            android:layout_gravity="center_vertical"
            android:src="@drawable/user_48"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/magen_sup"
            android:layout_marginLeft="@dimen/margen_izq"
            >
            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text"
                android:textStyle="bold"
                android:maxLength="30"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llNombre">
        <ImageView
            android:id="@+id/imgvNacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/magen_sup"
            android:layout_gravity="center_vertical"
            android:src="@drawable/nacimiento_48"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/magen_sup"
            android:layout_marginLeft="@dimen/margen_izq"
            >
            <EditText
                android:id="@+id/etNacimiento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/fechanac"
                android:inputType="text"
                android:textStyle="bold"
                android:maxLength="30"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llNacimiento">
        <ImageView
            android:id="@+id/imgvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/magen_sup"
            android:layout_gravity="center_vertical"
            android:src="@drawable/phone_48"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/magen_sup"
            android:layout_marginLeft="@dimen/margen_izq"
            >
            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:maxLength="10"
                android:textStyle="bold"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llTelefono">
        <ImageView
            android:id="@+id/imgvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/magen_sup"
            android:layout_gravity="center_vertical"
            android:src="@drawable/_message_filled_48"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/magen_sup"
            android:layout_marginLeft="@dimen/margen_izq"
            >
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textStyle="bold"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/llDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llEmail">
        <ImageView
            android:id="@+id/imgvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/magen_sup"
            android:layout_gravity="center_vertical"
            android:src="@drawable/description"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/magen_sup"
            android:layout_marginLeft="@dimen/margen_izq"
            >
            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/descripcion"
                android:inputType="text"
                android:textStyle="bold"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/texto_datos"
        android:text="@string/siguiente"/>

</RelativeLayout>
